# festim-gui

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.rst  DESIGN.md  Dockerfile  LICENSE  README.md  README.rst  example_paraview_window.py  pyproject.toml
.github/workflows/: test_and_release.yml
docker/setup/: apps.yml  initialize.sh
examples/docker/: Dockerfile  README.md
examples/docker/setup/: initialize.sh  requirements.txt
festim_example/: 2d_permeation.py  README.md  example_with_particle_source.py
setup/: apps.yml  initialize.sh
src/festim_gui/: app.py  execution.py  post_processing.py
src/festim_gui/app/: core.py  main.py
src/festim_gui/components/: __init__.py  navigation.py  repeated_item_controls.py  script_builder.py  script_editor.py
src/festim_gui/festim_ui/: __init__.py  component.py  material.py  mesh.py  problem.py
src/festim_gui/festim_ui/utils/: __init__.py  repeated.py  state.py  widgets.py
src/festim_gui/pages/: __init__.py  boundary_conditions_page.py  domains_page.py  exports_page.py  initial_conditions_page.py  materials_page.py  mesh_page.py  page.py  particle_source_page.py  problem_page.py  reactions_page.py  results_page.py  run_page.py  settings_page.py  species_page.py  temperature_page.py
src/festim_gui/utils/: __init__.py  script_builder.py  utils.py
tests/: test_execution.py  test_import.py
