[project]
name = "festim-gui"
version = "1.0.0"
description = "GUI for FESTIM"
authors = [
    {name = "Kitware, Inc."},
]
dependencies = [
    "trame>=3.12",
    "trame-dataclass>=2.0.5",
    "trame-vuetify",
    "trame-vtk",
]
requires-python = ">=3.10"
readme = "README.rst"
license = {text = "MIT License"}
keywords = ["Python", "Interactive", "Web", "Application", "Framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
app = [
    "pywebview",
]
jupyter = [
    "jupyterlab",
]
dev = [
    "pre-commit",
    "ruff",
    "pytest >=6",
    "pytest-cov >=3",
    "nox",
]

[project.scripts]
festim-gui = "festim_gui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build]
include = [
  "/src/festim_gui/**/*.py",
  "/src/festim_gui/**/*.js",
  "/src/festim_gui/**/*.css",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/festim_gui",
]

[tool.ruff]

[tool.ruff.lint]
extend-select = [
    "ARG", # flake8-unused-arguments
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "EM",  # flake8-errmsg
    "EXE", # flake8-executable
    "G",   # flake8-logging-format
    "I",   # isort
    "ICN", # flake8-import-conventions
    "NPY", # NumPy specific rules
    "PD",  # pandas-vet
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PL",  # pylint
    "PT",  # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "RET", # flake8-return
    "RUF", # Ruff-specific
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "UP",  # pyupgrade
    "YTT", # flake8-2020
]
ignore = [
    "PLR09",   # Too many <...>
    "PLR2004", # Magic value used in comparison
    "ISC001",  # Conflicts with formatter
]
isort.required-imports = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]
"src/**" = ["SIM117"]
[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
]
version_variables = [
    "src/festim_gui/__init__.py:__version__",
]

build_command = """
    python -m pip install -e '.[build]'
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
